@@ -70,7 +70,7 @@ $itemTable->setHeader(array(
 	make_sorting_header(_('Type'), 'type'),
 	_('Applications'),
 	make_sorting_header(_('Status'), 'status'),
-	$data['showErrorColumn'] ? _('Error') : null
+	$data['showInfoColumn'] ? _('Info') : null
 ));
 
 foreach ($this->data['items'] as $item) {
@@ -107,17 +107,15 @@ foreach ($this->data['items'] as $item) {
 		itemIndicatorStyle($item['status'], $item['state'])
 	));
 
-	if ($data['showErrorColumn']) {
-		$statusIcons = array();
-		if ($item['status'] == ITEM_STATUS_ACTIVE) {
-			if (zbx_empty($item['error'])) {
-				$error = new CDiv(SPACE, 'status_icon iconok');
-			}
-			else {
-				$error = new CDiv(SPACE, 'status_icon iconerror');
-				$error->setHint($item['error'], '', 'on');
-			}
-			$statusIcons[] = $error;
+	// info
+	if ($data['showInfoColumn']) {
+		$infoIcons = array();
+
+		if ($item['status'] == ITEM_STATUS_ACTIVE && !zbx_empty($item['error'])) {
+			$info = new CDiv(SPACE, 'status_icon iconerror');
+			$info->setHint($item['error'], '', 'on');
+
+			$infoIcons[] = $info;
 		}
 
 		// discovered item lifetime indicator
@@ -128,10 +126,19 @@ foreach ($this->data['items'] as $item) {
 					zbx_date2age($item['itemDiscovery']['ts_delete']), zbx_date2str(_('d M Y'), $item['itemDiscovery']['ts_delete']),
 					zbx_date2str(_('H:i:s'), $item['itemDiscovery']['ts_delete'])
 			));
-			$statusIcons[] = $deleteError;
+
+			$infoIcons[] = $deleteError;
+		}
+
+		if (!$infoIcons) {
+			$infoIcons[] = SPACE;
 		}
 	}
+	else {
+		$infoIcons = null;
+	}
 
+	// triggers info
 	$triggerHintTable = new CTableInfo();
 	$triggerHintTable->setHeader(array(
 		_('Severity'),
@@ -140,7 +147,6 @@ foreach ($this->data['items'] as $item) {
 		_('Status')
 	));
 
-	// triggers info
 	foreach ($item['triggers'] as $num => &$trigger) {
 		$trigger = $this->data['itemTriggers'][$trigger['triggerid']];
 		$triggerDescription = array();
@@ -246,7 +252,7 @@ foreach ($this->data['items'] as $item) {
 		item_type2str($item['type']),
 		new CCol(CHtml::encode($item['applications_list']), 'wraptext'),
 		$status,
-		$data['showErrorColumn'] ? $statusIcons : null
+		$infoIcons
 	));
 }
 
