@@ -110,11 +110,14 @@ $triggersTable->setHeader(array(
 	make_sorting_header(_('Name'), 'description', $link),
 	_('Expression'),
 	make_sorting_header(_('Status'), 'status', $link),
-	$data['showErrorColumn'] ? _('Error') : null
+	$data['showInfoColumn'] ? _('Info') : null
 ));
+
 foreach ($this->data['triggers'] as $tnum => $trigger) {
 	$triggerid = $trigger['triggerid'];
 	$trigger['discoveryRuleid'] = $this->data['parent_discoveryid'];
+
+	// description
 	$description = array();
 
 	$trigger['hosts'] = zbx_toHash($trigger['hosts'], 'hostid');
@@ -194,19 +197,21 @@ foreach ($this->data['triggers'] as $tnum => $trigger) {
 		);
 	}
 
-	if ($data['showErrorColumn']) {
-		$error = '';
-		if ($trigger['status'] == TRIGGER_STATUS_ENABLED) {
-			if (!zbx_empty($trigger['error'])) {
-				$error = new CDiv(SPACE, 'status_icon iconerror');
-				$error->setHint($trigger['error'], '', 'on');
-			}
-			else {
-				$error = new CDiv(SPACE, 'status_icon iconok');
-			}
+	// info
+	if ($data['showInfoColumn']) {
+		if ($trigger['status'] == TRIGGER_STATUS_ENABLED && !zbx_empty($trigger['error'])) {
+			$info = new CDiv(SPACE, 'status_icon iconerror');
+			$info->setHint($trigger['error'], '', 'on');
+		}
+		else {
+			$info = SPACE;
 		}
 	}
+	else {
+		$info = null;
+	}
 
+	// status
 	$status = '';
 	if (!empty($this->data['parent_discoveryid'])) {
 		$status = new CLink(
@@ -230,6 +235,7 @@ foreach ($this->data['triggers'] as $tnum => $trigger) {
 		);
 	}
 
+	// hosts
 	$hosts = null;
 	if (empty($this->data['hostid'])) {
 		foreach ($trigger['hosts'] as $hostid => $host) {
@@ -240,9 +246,11 @@ foreach ($this->data['triggers'] as $tnum => $trigger) {
 		}
 	}
 
+	// checkbox
 	$checkBox = new CCheckBox('g_triggerid['.$triggerid.']', null, null, $triggerid);
 	$checkBox->setEnabled(empty($trigger['discoveryRule']));
 
+	// expression
 	$expressionColumn = new CCol(triggerExpression($trigger, true));
 	$expressionColumn->setAttribute('style', 'white-space: normal;');
 
@@ -254,9 +262,8 @@ foreach ($this->data['triggers'] as $tnum => $trigger) {
 		$description,
 		$expressionColumn,
 		$status,
-		$data['showErrorColumn'] ? $error : null
+		$info
 	));
-	$triggers[$tnum] = $trigger;
 }
 
 // create go button
