@@ -408,7 +408,6 @@ else {
 	$data['realHosts'] = getParentHostsByTriggers($data['triggers']);
 
 	// determine, show or not column of errors
-	$data['showErrorColumn'] = true;
 	if ($data['hostid'] > 0) {
 		$host = API::Host()->get(array(
 			'hostids' => $_REQUEST['hostid'],
@@ -417,7 +416,10 @@ else {
 			'editable' => true
 		));
 		$host = reset($host);
-		$data['showErrorColumn'] = (!$host || $host['status'] != HOST_STATUS_TEMPLATE);
+		$data['showInfoColumn'] = (!$host || $host['status'] != HOST_STATUS_TEMPLATE);
+	}
+	else {
+		$data['showInfoColumn'] = true;
 	}
 
 	// nodes
